ecmascript/parser/tests/typescript-errors/class/method-readonly/input.ts.stderr
error: A method cannot be readonly
 --> $DIR/tests/typescript-errors/class/method-readonly/input.ts:2:5
  |
2 |     readonly m() {}
  |     ^^^^^^^^^^

